tests/typechecker/should_fail/duplicated_definitions_channel_inputs.csp
P = {x | x <- {0..1}, x <- {0..1}}
